Fix button spacing

--- a/gtk-3.0/scss/_global.scss
+++ b/gtk-3.0/scss/_global.scss
@@ -68,6 +68,6 @@ $wm_icons_unfocused_pressed: shade($selected_bg_color, 0.8);
 
 // widget styles
 $roundness: 4px;
-$spacing: 6px;
+$spacing: 5px;
 $gradient: 0.025;
 $contrast: .8;
