--- a/gtk-3.0/scss/widgets/_toggle.scss
+++ b/gtk-3.0/scss/widgets/_toggle.scss
@@ -77,7 +77,7 @@
 			@include linear-gradient(shade($bg_color, 1.2));
 
 			border: 1px solid rgba(0,0,0,0.2);
-			box-shadow: 0 1px 2px -1px alpha($dark_shadow, .3);
+			box-shadow: 0 1px 2px -1px alpha($dark_shadow, .12);
 
 			&:insensitive {
 				border-color: rgba(0,0,0,0.1);
