--- a/gtk-3.0/scss/widgets/_toolbar.scss
+++ b/gtk-3.0/scss/widgets/_toolbar.scss
@@ -9,7 +9,7 @@
     @include linear-gradient($bg);
     @include border($bg);
 
-    padding: $spacing + 2px;
+    padding: $spacing * 2;
     color: $fg;
 
     &:insensitive {
